// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <button
        class="t-switch t-size-l"
        role="switch"
        type="button"
      >
        <span
          class="t-switch__handle"
        />
        <div
          class="t-switch__content"
        />
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-switch t-is-checked t-size-l"
        role="switch"
        type="button"
      >
        <span
          class="t-switch__handle"
        />
        <div
          class="t-switch__content"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`describe.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <button
            class="t-switch t-size-l"
            role="switch"
            type="button"
          >
            <span
              class="t-switch__handle"
            />
            <div
              class="t-switch__content"
            >
              关
            </div>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-switch t-is-checked t-size-l"
            role="switch"
            type="button"
          >
            <span
              class="t-switch__handle"
            />
            <div
              class="t-switch__content"
            >
              开
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <button
            class="t-switch t-size-l"
            role="switch"
            type="button"
          >
            <span
              class="t-switch__handle"
            />
            <div
              class="t-switch__content"
            >
              <svg
                class="t-icon t-icon-close"
              >
                <use
                  xlink:href="#t-icon-close"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-switch t-is-checked t-size-l"
            role="switch"
            type="button"
          >
            <span
              class="t-switch__handle"
            />
            <div
              class="t-switch__content"
            >
              <svg
                class="t-icon t-icon-check"
              >
                <use
                  xlink:href="#t-icon-check"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <button
        class="t-switch t-is-checked t-size-l"
        role="switch"
        type="button"
      >
        <span
          class="t-switch__handle"
        />
        <div
          class="t-switch__content"
        />
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-switch t-size-m"
        role="switch"
        type="button"
      >
        <span
          class="t-switch__handle"
        />
        <div
          class="t-switch__content"
        />
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-switch t-size-s"
        role="switch"
        type="button"
      >
        <span
          class="t-switch__handle"
        />
        <div
          class="t-switch__content"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`status.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <button
        class="t-switch t-is-checked t-size-l"
        role="switch"
        type="button"
      >
        <span
          class="t-switch__handle"
        />
        <div
          class="t-switch__content"
        />
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-switch t-is-checked t-is-loading t-size-l"
        disabled=""
        role="switch"
        type="button"
      >
        <span
          class="t-switch__handle"
        >
          <div
            class="t-loading t-loading--center t-size-s"
          >
            <svg
              class="t-loading__gradient t-icon-loading"
              height="1em"
              version="1.1"
              viewBox="0 0 14 14"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <foreignobject
                height="12"
                width="12"
                x="1"
                y="1"
              >
                <div
                  class="t-loading__gradient-conic"
                />
              </foreignobject>
            </svg>
          </div>
        </span>
        <div
          class="t-switch__content"
        />
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-switch t-is-disabled t-size-l"
        disabled=""
        role="switch"
        type="button"
      >
        <span
          class="t-switch__handle"
        />
        <div
          class="t-switch__content"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
